2007-08-03  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-init.c (syx_build_basic): send #initializeFirstSystem instead of #initialize

	* st/kernel/ArrayedCollection.st (copyWithout:): added refinement
	
	* st/kernel/Collection.st (copyWithout:): added

	* st/kernel/SequenceableCollection.st (copyReplaceAll:with:): added
	(matchSubcollection:startingAt:): added
	(copyReplaceFrom:to:with:): added
	(copyReplaceFrom:to:withObject:): added
	(copyReplacing:withObject:): added

2007-08-02  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/TextCollector.st: use #perform:with: to send message to the proxy

	* st/kernel/Behavior.st (initializeSubclassOf): create a method dictionary

	* syx/syx-object.c (syx_metaclass_new): create a method dictionary
	(syx_class_new): create a method dictionary

	* st/kernel/Object.st (respondsTo:): added
	(perform:): added
	(perform:with:): added
	(perform:with:with:): added
	(perform:with:with:with): added
	(perform:withArguments): added

	* st/kernel/Behavior.st (doesUnderstand:): added

	* st/kernel/Dictionary.st (includesKey:): added

	* st/kernel/Set.st: added rehashing methods
	added numElements instance variable

	* st/kernel/Dictionary.st: added rehashing methods
	added numElements instance variable

	* st/kernel/ObjectMemory.st (atData:put:): added with primitive

	* st/kernel/Link.st: removed since unused anymore

2007-08-01  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.c (syx_process_execute_blocking): save/restore the active process when running blocking processes

	* syx/syx-interp.h (SYX_PRIM_FAIL): add the arguments array to the GC transaction

2007-07-30  Luca Bruno  <lethalman88@gmail.com>

	== Released 0.1.3 version ==
	
	* st/kernel/Character.st (isXDigit): added

	* st/kernel/Compiler.st (literalArrayToken): fixed parsing when the array contains numbers

	* st/kernel/Number.st (readFrom:): parse radix numbers

	* syx/syx-parser.c (_syx_parser_parse_literal_array): character parsing in the array was missed
