@@ -1,5 +1,15 @@
 2007-08-03  Luca Bruno  <lethalman88@gmail.com>
 
+	* syx/syx-primitives.c (Object_perform): fixed arguments
+	(Object_performWithArguments): fixed too
+
+	* st/kernel/Compiler.st (symbolToken): fixed binary symbol parsing
+	(parseArray): added
+
+	* st/kernel/Number.st (readFrom:): fixed parsing
+
+	* st/kernel/Interval.st: added
+
 	* syx/syx-init.c (syx_build_basic): send #initializeFirstSystem instead of #initialize
 
 	* st/kernel/ArrayedCollection.st (copyWithout:): added refinement
